postgresql-common (128) UNRELEASED; urgency=low

  * debian/backport-ppa: Make this work for postgresql-X.Y packages, too.
  * debian/postgresql-client-common.links: Wrap pg_basebackup.
    (Closes: #647224)
  * pg_buildext: Fix wrong exit code if "pgversions" does not exist.
    (Closes: #646698)

 -- Martin Pitt <mpitt@debian.org>  Mon, 19 Dec 2011 16:17:31 +0100

postgresql-common (127) unstable; urgency=low

  * debian/backport-ppa: Add oneiric.
  * logrotate 3.8 landed in unstable, rebuild against this to get a proper
    logrotate config snippet and adjust the depends/breaks. (See Debian
    #640493)
  * debian/rules: Fix logrotate dependency generation logic to only consider
    the most recent logrotate version.

 -- Martin Pitt <mpitt@debian.org>  Tue, 06 Dec 2011 06:18:32 +0100

postgresql-common (126) unstable; urgency=low

  * pg_ctlcluster: Prefer setting oom_score_adj over oom_adj, as the latter is
    deprecated. (Closes: #646096)
  * Add debian/tests/{control,system}: DEP-8/autopkgtest control files for
    running the integration tests.
  * t/020_create_sql_remove.t: Set stdin for forked psql process, so that the
    test suite run does not need a defined stdin.
  * debian/control: Clean up metapackage descriptions. (Closes: #649400)

 -- Martin Pitt <mpitt@debian.org>  Fri, 25 Nov 2011 11:20:29 +0100

postgresql-common (125) unstable; urgency=low

  * Add debian/backport-ppa: Script to generate and upload backport packages
    to my Ubuntu PPA. Only for personal use.
  * Add t/160_alternate_confroot.t: Test creation, operation, upgrading, and
    removal of clusters as user nobody using $PG_CLUSTER_CONF_ROOT. This
    reproduces LP#835630 and other bugs.
  * PgCommon.pm: If $PG_CLUSTER_CONF_ROOT is set, untaint it.
  * pg_upgradecluster: Don't hardcode /etc/postgresql/, use
    $PgCommon::confroot to respect $PG_CLUSTER_CONF_ROOT. (LP: #835630)
  * pg_upgradecluster: Add --logfile option to specify a custom log file for