@@ -5,6 +5,9 @@ postgresql-common (128) UNRELEASED; urgency=low
     (Closes: #647224)
   * pg_buildext: Fix wrong exit code if "pgversions" does not exist.
     (Closes: #646698)
+  * pgxs_debian_control.mk: Some robustifications: Write to temporary control
+    file first and rename only after everything succeeds, otherwise delete it.
+    Catch errors from pg_buildext and abort the build. (Closes: #646702)
 
  -- Martin Pitt <mpitt@debian.org>  Mon, 19 Dec 2011 16:17:31 +0100
 
